--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "license": "MIT",
   "devDependencies": {
     "firebase-tools": "^12.6.1"
+  },
+  "dependencies": {
+    "eslint": "^8.50.0"
   }
 }
