--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "ajv": "^8.12.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
