--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "firebase-tools": "^12.6.1"
   },
   "dependencies": {
-    "eslint": "^8.50.0"
+    "eslint": "^8.50.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
